# Shellminator

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  build.py  commit_change.txt  coverage.cmake  exampleGenerator.py  keywords.txt  library.properties  pythonRequirements.txt  python_env.yml  run_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: compile-examples.yml
Doc/Style/: doxygen-awesome.css  header.html
Doc/html/: _shellminator_8cpp.html  _shellminator_8cpp.js  _shellminator_8hpp.html  _shellminator_8hpp.js  _shellminator_8hpp_source.html  annotated.html  annotated_dup.js  arduino__installation_8md.html  arduiono_installation.html  class_shellminator-members.html  class_shellminator.html  class_shellminator.js  classes.html  dir_3a23695c6bd64e2aaf9fdc392e0e1df4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_78b01f221e5d69dbe1f7a50c401396d7.html  dir_78b01f221e5d69dbe1f7a50c401396d7.js  files.html  files_dup.js  functions.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.js  main__page_8md.html  md__doc_markdown_pages_page_1.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  qr__code__support_8md.html  usage__with__arduino_8md.html  usage_with_arduino.html
Doc/images/: arduino_install_check_library.xcf  arduino_install_unzip.xcf  create_costum_logo_c_string_generator.xcf
Doc/markdown_pages/: arduino_installation.md  main_page.md  qr_code_support.md  usage_with_arduino.md
docs/: CNAME  about.html  board_support.html  developers.html  device_support.html  examples.html  features.html  gui_support.html  ide_support.html  index.html  open_source.html  run_server.py  styles.css
docs/Style/: header.html  layout.xml
docs/html/: 001__basic__page_8md.html  001_basic_page.html  002__command_callback__page_8md.html  002_command_callback_page.html  003__text_formatting__page_8md.html  003_text_formatting_page.html  004__format_matrix__page_8md.html  004_format_matrix_page.html  005__logo__page_8md.html  005_logo_page.html  006__password__page_8md.html  006_password_page.html  007__input__page_8md.html  007_input_page.html  008__input__number__page_8md.html  008_input_number_page.html  009__beep__page_8md.html  009_beep_page.html  010__banner_text__page_8md.html  010_banner_text_page.html  100__key_override__page_8md.html  100_key_override_page.html  101__qr_code__page_8md.html  101_qr_code_page.html  102__buffering__page_8md.html  102_buffering_page.html  120__neofetch_basic__page_8md.html  120_neofetch_basic_page.html  121__neofetch_advanced__page_8md.html  121_neofetch_advanced_page.html  200__commander_basic__page_8md.html  200_commander_basic_page.html  201__commander_optimizations__page_8md.html  201_commander_optimizations_page.html  202__commander_simple_arguments__page_8md.html  202_commander_simple_arguments_page.html  203__commander_argument_types__page_8md.html  203_commander_argument_types_page.html  204__commander_position_independent_arg__page_8md.html  204_commander_position_independent_arg_page.html  (+1359 more)
docs/images/: ScreenLogic.graphml  banner_text.xcf  characterParserStateMachine.graphml  create_costum_logo_ascii_art_generator.xcf  footer_image.xcf  screen_space.xcf
docs/markdown_pages/: api.md  coverage.md  developer_zone.md  example_1.md  example_codes.md  examples.md  main_page.md  shortcut_keys.md  shortcut_keys.tgn  supported.tgn  supported_platforms.md
docs/webExamples/: Basic.html  Basic.js  Basic.wasm  Buffered.html  Buffered.js  Buffered.wasm  Button.html  Button.js  Button.wasm  Duinocrisis.html  Duinocrisis.js  Duinocrisis.wasm  Execute.html  Execute.js  Execute.wasm  Executeconstructoradvanced.html  Executeconstructoradvanced.js  Executeconstructoradvanced.wasm  Executeconstructorsimple.html  Executeconstructorsimple.js  Executeconstructorsimple.wasm  Mouse.html  Mouse.js  Mouse.wasm  Progressbaradvanced.html  Progressbaradvanced.js  Progressbaradvanced.wasm  Progressbarsimple.html  Progressbarsimple.js  Progressbarsimple.wasm  Runningplot.html  Runningplot.js  Runningplot.wasm  Screenbasic.html  Screenbasic.js  Screenbasic.wasm  Simpleplot.html  Simpleplot.js  Simpleplot.wasm
examples/Shellminator_Commander/: Shellminator_Commander.ino
examples/Shellminator_ESP32_server_with_Commander/: Shellminator_ESP32_server_with_Commander.ino
examples/Shellminator_ESP32_server_with_Commander_prompt/: Shellminator_ESP32_server_with_Commander_prompt.ino
examples/Shellminator_PROGMEM_Logo/: Shellminator_PROGMEM_Logo.ino
examples/Shellminator_execute/: Shellminator_execute.ino
extras/: Basic.ino  CMakeLists.txt  emscripten_template_page.html  exampleGenerator.py  requirements.txt
extras/ArduinoSim/: Print.cpp
src/: Shellminator-ArrowKeys.cpp  Shellminator-BLE-Stream.cpp  Shellminator-BLE-Stream.hpp  Shellminator-Browser-Response.hpp  Shellminator-BufferedPrinter.cpp  Shellminator-BufferedPrinter.hpp  Shellminator-Buttons.cpp  Shellminator-Buttons.hpp  Shellminator-Colorizer.cpp  Shellminator-Colorizer.hpp  Shellminator-Commander-Interface.cpp  Shellminator-Commander-Interface.hpp  Shellminator-Crypto.cpp  Shellminator-Crypto.hpp  Shellminator-DefaultSettings.hpp  Shellminator-Events.cpp  Shellminator-GUI.hpp  Shellminator-Helpers.cpp  Shellminator-Helpers.hpp  Shellminator-IO.cpp  Shellminator-IO.hpp  Shellminator-Input.cpp  Shellminator-MouseInterface.cpp  Shellminator-Neofetch.cpp  Shellminator-Neofetch.hpp  Shellminator-PlotModule.cpp  Shellminator-PlotModule.hpp  Shellminator-Progress.cpp  Shellminator-Progress.hpp  Shellminator-QR-Code-Module.cpp  Shellminator-QR-Code-Module.hpp  Shellminator-Screen.hpp  Shellminator-SearchModule.cpp  Shellminator-Settings.hpp  Shellminator-SpecialKeys.cpp  Shellminator-Styles.cpp  Shellminator-TcpSocket.cpp  Shellminator-TcpSocket.hpp  Shellminator-VT100-Commands.hpp  Shellminator-WebServer.cpp  (+5 more)
web_test/: Basic.js  Basic.wasm  custom.html
(+681 files in other folders)
